--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .gridItem {
     height: 50px;
     width: 50px;
-    background: blueviolet;
+    background: white;
     border: 1px solid #000;
     position: absolute;
 }
