Add button,when pressed prompts user to input number for squares per side

--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,9 @@
     position: absolute;
 }
 
+button {
+    height: max-content;
+    width:  max-content;
+    background: rgb(116, 205, 240);
+    font-size: 40px;
+}
