Initialize "squareNum" tag to 16
-Above mentioned tag was set to 0 earlier.
-It caused the grid to disappear when "Darkening effect" btn was
selected

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@
 }
 
 button {
+    display: flex;
+    margin :10px;
     height: max-content;
     width:  max-content;
     background: rgb(116, 205, 240);
